IW-Assignment1-portfolio/style.css
* {
    margin: 0;
    padding: 0;
}

.container {
    height: 100vh;
    width: 100%;
    background-image: url(images/Studio_Project.png);
    background-size: cover;
    position: relative;
    
}

.navbar {
    width: 100%;
    height: 15vh;
    display: flex;
    align-items: center;
}

nav {
    flex: 1;
    padding-left: 60px;
}

nav ul li{
    display: inline;
    margin: 0px 20px;
    padding: 0;
  }

nav ul li a{
    text-decoration: none;
    color: #333;
}

.content h1{
    font-size: 60px;
    font-weight: 100;
    margin-top: 25px;
    margin-bottom: 15px;
    color: #333;
}

.content p {
    font-size: 20px;
    color: #333;
}

.content {
    margin-left: 10%;
    margin-top: 10%;
}

.content .btn {
    display: inline-block;
    background: linear-gradient(50deg, #757474, #232c2e);
    border-radius: 8px;
    padding: 10px 20px;
    text-decoration: none;
    color: #fff;
    box-shadow: 3px 8px 22px rgba(94, 28, 68, 0.15);
}

